# kameris-backend

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  shippable.yml  wercker.yml
benchmarks/: benchmark.cpp  benchmark.wl  build_cpp_benchmark.bat  build_cpp_benchmark.sh
docs/: output-files.md
libkameris/: distances-sparse.hpp  distances.hpp  representations.hpp  utils.hpp
libkameris/distances/: cosine_pearson.hpp  euclidean_manhattan.hpp  information.hpp  ssim.hpp  utils.hpp
libkameris/distances-sparse/: cosine_pearson.hpp  euclidean_manhattan.hpp  information.hpp  utils.hpp
libkameris/representations/: cgr.hpp  descriptor.hpp  twocgr.hpp
libkameris/utils/: fasta.hpp  math.hpp  matrix_vector_adapters.hpp  parallel.hpp  random.hpp  time.hpp  types.hpp
libmmg/: distances-sparse.hpp  distances.hpp  io.hpp  representations.hpp  utils.hpp
libmmg/distances/: cosine_pearson.hpp  euclidean_manhattan.hpp  information.hpp  ssim.hpp  utils.hpp
libmmg/distances-sparse/: cosine_pearson.hpp  euclidean_manhattan.hpp  information.hpp  utils.hpp
libmmg/io/: adapters.hpp  binary.hpp  binary_collections.hpp  pseudo_cast.hpp  storage_encoding.hpp  text.hpp
libmmg/representations/: cgr.hpp  descriptor.hpp  twocgr.hpp
libmmg/utils/: fasta.hpp  math.hpp  matrix_vector_adapters.hpp  parallel.hpp  random.hpp  time.hpp  types.hpp
minimal-clis/: build_generation_cgr.bat  build_generation_dists.bat  generation_cgr.cpp  generation_dists.cpp
mmg-formats/cpp/: all_formats.hpp  dist_reader.hpp  dist_writer.hpp  element_type.hpp  headers.hpp  repr_reader.hpp  repr_writer.hpp
mmg-formats/cpp/common/: binary_collection_io.hpp  binary_io.hpp  pseudo_cast.hpp  raw_binary_io.hpp  storage_encoding.hpp
src/: generation_cgr.cpp  generation_dists.cpp
src/common/: checkpointer.cpp  checkpointer.hpp  defaults.hpp  filesystem_checks.cpp  filesystem_checks.hpp  job_execution.cpp  job_execution.hpp  memory_usage.hpp  options_structs.hpp  output_headers.cpp  output_headers.hpp  progress_bar.hpp  run_args.cpp  run_args.hpp  run_options.cpp  run_options.hpp  version.hpp
src/minimal-cli/: build_linux.sh  build_mac.sh  build_windows.bat  generation_cgr.cpp  generation_dists.cpp
src/mmg-cli/: args_parser.cpp  args_parser.hpp  colors.hpp  console_marks.hpp  exceptions.hpp  jobspec_parsers.cpp  jobspec_parsers.hpp  mmg-cli.cpp  progress_bar.cpp  progress_bar.hpp  streams.hpp  usage_strings.hpp
tests/: test_helpers.hpp
tests/kameris-formats/: binary_io.cpp  storage_encoding.cpp
tests/libkameris/: distances-sparse.cpp  distances.cpp  fasta.cpp  parallel.cpp  random.cpp  representations.cpp
tests/libmmg/: binary_io.cpp  distances-sparse.cpp  distances.cpp  fasta.cpp  parallel.cpp  random.cpp  representations.cpp  storage_encoding.cpp  test_helpers.hpp  text_io.cpp
tests/mmg-file-formats/: binary_io.cpp  storage_encoding.cpp
